--- a/game/index.html
+++ b/game/index.html
@@ -1,1 +1,9 @@
-
+<html>
+    <head>
+        <title>Game</title>
+    </head>
+    <body>
+        <script src="./main.js"></script>
+    </body>
+  <h1>Test</h1>
+</html>
