--- a/game/index.html
+++ b/game/index.html
@@ -3,7 +3,7 @@
         <title>Game</title>
     </head>
     <body>
-        <script src="./main.js"></script>
+        <script src="/main.1f19ae8e.js"></script>
     </body>
-  <h1>Test</h1>
+
 </html>
