--- a/game/index.html
+++ b/game/index.html
@@ -3,7 +3,7 @@
         <title>Game</title>
     </head>
     <body>
-        <script src="/main.1f19ae8e.js"></script>
+        <script src="./main.1f19ae8e.js"></script>
     </body>
 
 </html>
